refactor: improve validation output with hierarchical grouping
- Group validation items by type (BPMN/FHIR/Plugin) then by severity (ERROR/WARN/INFO)
- Filter plugin-level items from BPMN/FHIR output to display under plugin configuration
- Add collected plugin items support to PluginValidationService
- Display SUCCESS items only in verbose mode
- Fix ValidationResult class naming conflict
- Add consistent color coding for better readability
- Add mint-colored log output with blank line spacing for BPMN, FHIR, and Plugin validation services
- Move severity filtering logic to ValidationUtils to remove code duplication
- Fix the ValidationOutputTest